# cryptown

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  HELP.md  build.gradle  pom.xml
client/: index.html  main.ts  program.ts
contract/: .gitignore  package-lock.json  package.json
contract/client/: main.ts  program.ts
contract/program-rust/: Cargo.toml
contract/program-rust/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
contract/program-rust/tests/: lib.rs
contract/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
contract/tests/: lib.rs
eblomixer/: README.md  config.json  eblomixer.py
front/: README.md  package-lock.json  package.json  svelte.config.js
front/src/: app.html
front/src/api/: APIController.ts  APIResponse.ts
front/src/components/: info.svelte  mint.svelte  regions.svelte  server.svelte  toolbar.svelte  wallets.svelte
front/src/nftprogram/: candymachine.ts  instructions.ts  interfaces.ts  programs.ts
front/src/program/: NFTMetadata.ts  ProgramAccount.ts  TokenAccount.ts  UpdateTask.ts  program.ts
front/src/routes/: index.svelte  login.svelte
front/src/store/: store.ts
front/src/wallets/: IWallet.ts  IWalletController.ts  PhantomWallet.ts
nginx/: Dockerfile  application.conf  cert.crt  cert.key
plugin/: pom.xml
plugin/NEWPlugin/: pom.xml
server/: Dockerfile  db.s3db  eula.txt  server.properties
server/world/: level.dat_old
server/world/advancements/: 17cdd556-f372-323f-aa1b-48c6843f14d9.json  5bc5417c-139f-4625-9943-c09a21b061ae.json  (+4 more)
(+124 files in other folders)
