
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.10.7"
spl-token = {version = "3.2.0", features=["no-entrypoint"]}
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.10.7"
solana-sdk = "1.10.7"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
